--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
-    
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Arizonia|Bad+Script|Carrois+Gothic+SC|Cookie|Dancing+Script|Great+Vibes|Indie+Flower|Kaushan+Script|Merriweather|Patrick+Hand+SC|Poiret+One|Satisfy|Shadows+Into+Light" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
